# Docker

02_Containerization/app/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
02_Containerization/app/app/: main.py
